apps/base/capacitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capacitor
  namespace: flux-system
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: capacitor
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
