apps/base/capacitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: flux-system
spec:
  ingressClassName: traefik
  rules:
    - host: capacitor.barlabs.tech
      http:
        paths:
          - backend:
              service:
                name: capacitor
                port:
                  number: 9000
            path: /
            pathType: Prefix
